[package]
name = "dsmsg"
description = "Randomly generate online messages from Dark Souls, Demon's Souls, and Bloodborne."
version = "1.4.0-dev"

authors = ["Yaulendil <davarice@protonmail.com>"]
repository = "https://github.com/yaulendil/dsmsg"
readme = "README.md"

exclude = ["/.idea", "/.vscode", "*.sh", "*.tar.gz", "*.zip"]
categories = ["command-line-utilities"]
keywords = ["dark-souls", "message", "random", "text", "generator"]

edition = "2018"
license = "GPL-3.0"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"


[dependencies]
argh = "0.1.3"
lazy_static = "1.4.0"
rand = "0.7"


[features]
default = ["ds1", "ds2", "ds3"]

# NewLine Feature inserts a Line Break between parts of a Compound Message.
newline = []

# Include messages from Demon's Souls.
demons = []
# Include messages from Dark Souls 1.
ds1 = []
# Include messages from Dark Souls 2.
ds2 = []
# Include messages from Dark Souls 3.
ds3 = []
# Include messages from Bloodborne.
bloodborne = []

# Include all available message sets.
all-sets = ["ds1", "ds2", "ds3", "bloodborne", "demons"]
